--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Headland+One&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" />
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
@@ -25,7 +26,7 @@
                 <ul class="header-list">
                     <li class="header-item"><a href="./index.html#" class="header-link">Main</a></li>
                     <li class="header-item"><a href="#" class="header-link">About Us</a></li>
-                    <li class="header-item"><a href="#" class="header-link">Contacts</a></li>
+                    <li class="header-item"><a href="./index.html" class="header-link">Contacts</a></li>
                 </ul>
             </nav>
             <!-- Log in кнопка -->
@@ -75,7 +76,8 @@
         <!-- trailer -->
         <section class="trailer">
             <div class="container">
-                <a href="https://youtu.be/d9MyW72ELq0?si=vDRnNRm6hN7KBYrL"><button type="button" class="trailer-button button">Watch Trailer</button></a>
+                <a href="https://youtu.be/d9MyW72ELq0?si=vDRnNRm6hN7KBYrL"><button type="button"
+                        class="trailer-button button">Watch Trailer</button></a>
             </div>
         </section>
         <!-- second quote -->
@@ -130,19 +132,19 @@
     <!-- footer -->
     <footer class="footer">
         <div class="container">
-            <div class="footer-wrap"> 
+            <div class="footer-wrap">
                 <a href="./index.html"><img src="./pictures/avatar-logo.webp" alt="Avatar Logo" class="footer-logo"></a>
                 <ul class="footer-info">
-                    <li class="footer-item"><span class="footer-label">Q&A E-mail</span><span class="email">avatartwowqa@gmail.com</span></li>
-                    <li class="footer-item"><span class="footer-label">Cooperation E-mail</span><span class="email">avatartwowcoop@gmail.com</span></li>
+                    <li class="footer-item"><span class="footer-label">Q&A E-mail</span><span
+                            class="email">avatartwowqa@gmail.com</span></li>
+                    <li class="footer-item"><span class="footer-label">Cooperation E-mail</span><span
+                            class="email">avatartwowcoop@gmail.com</span></li>
                 </ul>
             </div>
         </div>
         <p class="footer-copyright">&copy; 2023 Avatar: The Way Of Water. All rights reserved</p>
     </footer>
-    <a href="#" class="to-top">
-        <i class="fas fa-chevron-up"></i>
-    </a>
+    <a href="#" class="to-top">↑</a>
     <script src="./js/to-top.js"></script>
     <script src="./js/lang-switcher.js"></script>
 </body>
