--- a/ua.html
+++ b/ua.html
@@ -10,7 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Headland+One&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" />
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
@@ -140,9 +140,7 @@
         </div>
         <p class="footer-copyright">&copy; 2023 Avatar: The Way Of Water. All rights reserved</p>
     </footer>
-    <a href="#" class="to-top">
-        <i class="fas fa-chevron-up"></i>
-    </a>
+    <a href="#" class="to-top"> </a>
     <script src="./js/to-top.js"></script>
     <script src="./js/lang-switcher.js"></script>
 </body>
