Last lang switcher fix + Added Ukrainian language

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <!-- trailer -->
         <section class="trailer">
             <div class="container">
-                <a href="https://youtu.be/d9MyW72ELq0?si=vDRnNRm6hN7KBYrL"><button type="button"
+                <a href="https://youtu.be/d9MyW72ELq0?si=vDRnNRm6hN7KBYrL" target="_blank"><button type="button"
                         class="trailer-button button">Watch Trailer</button></a>
             </div>
         </section>
@@ -144,7 +144,7 @@
         </div>
         <p class="footer-copyright">&copy; 2023 Avatar: The Way Of Water. All rights reserved</p>
     </footer>
-    <a href="#" class="to-top">↑</a>
+    <a href="#" class="to-top">&uarr;</a>
     <script src="./js/to-top.js"></script>
     <script src="./js/lang-switcher.js"></script>
 </body>
