--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <!-- Секція герой -->
         <section class="hero">
             <div class="container">
-                <h1 class="visually-hidden">Website for an Avatar fans<h1>
+                <h1 class="visually-hidden">Website for an Avatar fans</h1>
                         <div class="hero-textbox">
                             <p class="hero-text-navi">Oe perlltxe hu tsamsiyu! Ngari hu Eywa salew tirea, tokx
                                 'ì'awn slu Na'viyä
@@ -71,8 +71,7 @@
         <!-- trailer -->
         <section class="trailer">
             <div class="container">
-                <a href="https://youtu.be/d9MyW72ELq0?si=vDRnNRm6hN7KBYrL" target="_blank"><button type="button"
-                        class="trailer-button button">Watch Trailer</button></a>
+                <a href="https://youtu.be/d9MyW72ELq0?si=vDRnNRm6hN7KBYrL" target="_blank" class="trailer-button button">Watch Trailer</a>
             </div>
         </section>
         <!-- second quote -->
